# bootcamp_dbt_de

./: README.md  docker-compose.yml  pyproject.toml
dbt-core-northwind-project/: .env  Dockerfile  docker-compose.yml
northwind/: dbt_project.yml
northwind/models/marts/: vendas.sql
northwind/models/staging/crm/: stg_crm__nova_tabela.sql
northwind/seeds/: nova_tabela.csv
